# where-am-i

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  where-am-i.exe.manifest  where-am-i.exe.manifest.rc  where-am-i.toml
.github/workflows/: build.yml
src/: api.rs  log.rs  main.rs
static/: index.html  join.html  qr.html  style.css  world.html
